RecyclerView View Detail

--- a/app/src/main/res/layout/item_list.xml
+++ b/app/src/main/res/layout/item_list.xml
@@ -60,7 +60,7 @@
             android:layout_marginLeft="16dp"
             android:layout_toRightOf="@+id/buttonEdit"
             android:text="DELETE"
-            android:textColor="?attr/colorPrimary" />
+            android:textColor="?attr/colorAccent" />
 
         <ImageButton
             android:id="@+id/buttonFavorite"
